✨ add react routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    /* Paths */
+    "baseUrl": "src",
+    "paths": {
+      "@controllers/*": ["controllers/*"],
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
