--- a/package.json
+++ b/package.json
@@ -38,17 +38,8 @@
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.ts": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.tsx": [
+    "*.{ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ]
