--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -2,15 +2,15 @@ name: Check ESLint on Pull Request
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  fix:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v2
-      - name: installing eslint
-        run: npm i -g eslint
-      - name: Fixing Files
-        run: npm run lint
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm install
+      - name: Linting Files
+        run: npx eslint .
