✨ add routes builder, context provider and example store

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "baseUrl": "src",
     "paths": {
       "@controllers/*": ["controllers/*"],
+      "@models/*": ["models/*"],
     },
 
     /* Bundler mode */
