--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-file-image-loader": "^0.2.0",
+    "cornerstone-tools": "^6.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
@@ -18,6 +21,7 @@
   "devDependencies": {
     "@dword-design/eslint-plugin-import-alias": "^5.0.0",
     "@eslint/js": "^9.2.0",
+    "@types/cornerstone-core": "^2.3.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
