🚚 move client code to its own folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "editor.tabSize": 2,
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "always"
-    }
+    },
+    "eslint.workingDirectories": [
+        { "directory": "./client", "changeProcessCWD": true },
+        { "directory": "./server", "changeProcessCWD": true }]
 }
