--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "dicom-parser": "^1.8.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-compare": "^3.2.2",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
