🐛 fix body parser

--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   },
