--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "@types/cors": "^2.8.17",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "lowdb": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
