--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "lowdb": "^7.0.1"
+    "jsonwebtoken": "^9.0.2",
+    "lowdb": "^7.0.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
