--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-fast-compare": "^3.2.2",
     "react-router-dom": "^6.23.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "ts-results": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
