--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -9,7 +9,9 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
     /* Paths */
-    "baseUrl": "src",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
