♻️ Change from cornerstone-core to @cornerstonejs/core

--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@cornerstonejs/core": "^1.84.4",
+    "@cornerstonejs/dicom-image-loader": "^1.84.4",
+    "@cornerstonejs/tools": "^1.84.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.48.0",
     "axios": "^1.7.2",
-    "cornerstone-core": "^2.6.1",
-    "cornerstone-wado-image-loader": "^4.13.2",
+    "dcmjs": "^0.34.1",
     "dicom-parser": "^1.8.21",
     "framer-motion": "^11.5.4",
     "react": "^18.2.0",
