--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@cornerstonejs/core": "^1.84.4",
     "@cornerstonejs/dicom-image-loader": "^1.84.4",
+    "@cornerstonejs/streaming-image-volume-loader": "^1.86.0",
     "@cornerstonejs/tools": "^1.84.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
